# Data-Engineering-Projects

./: .gitignore
.github/workflows/: ci.yml
E-Commerce Sales Cleansing & Modeling/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
E-Commerce Sales Cleansing & Modeling/.devcontainer/: devcontainer.json
E-Commerce Sales Cleansing & Modeling/dags/: ecommerce_sales_pipeline.py
E-Commerce Sales Cleansing & Modeling/dashboard/: app.py
E-Commerce Sales Cleansing & Modeling/scripts/: generate_report.py  load_processed_to_postgres.py
E-Commerce Sales Cleansing & Modeling/sql/ddl/: 001_staging.sql  002_dimensions.sql  003_fact_sales.sql  004_views.sql
E-Commerce Sales Cleansing & Modeling/sql/transformations/: 001_load_dimensions.sql  002_load_fact_sales.sql  003_quality_checks.sql
E-Commerce Sales Cleansing & Modeling/src/: __init__.py
E-Commerce Sales Cleansing & Modeling/src/db/: load_raw.py  postgres.py
E-Commerce Sales Cleansing & Modeling/src/ingest/: __init__.py  downloader.py  online_retail.py
E-Commerce Sales Cleansing & Modeling/src/transform/: __init__.py  cleanse.py  quality.py
E-Commerce Sales Cleansing & Modeling/tests/integration/: test_postgres_pipeline.py
E-Commerce Sales Cleansing & Modeling/tests/unit/: test_ingest.py  test_load_processed_to_postgres.py  test_mocked_boundaries.py  test_quality.py  test_transform.py
